--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -22,3 +22,11 @@
   right: 10px;
   z-index: 3;
 }
+
+@media only screen and (max-width: 600px){
+  .link__img{
+    width: 100%;
+    max-width: 40px;
+    height: 40px;
+  }
+}
